fix: Adjust page layout, footer height and opening section img

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <h1>Sell More!</h1>
     <p>Open shop on our platform and increase your sales</p>
     <a href="Contact.html" class="btn btn-primary">Open your shop</a>
+    <div class="opening-img-container"></div>
 </section>
 
 <section class="stats">
